Improve edit form looks

--- a/src/Admin/Templates/admin_driver/edit.html.twig
+++ b/src/Admin/Templates/admin_driver/edit.html.twig
@@ -14,22 +14,22 @@
                 <div class="row">
                     <div class="form-group mb-3">
                         {{ form_label(form.name) }}
-                        {{ form_widget(form.name, {'attr': {'class': 'form-control mt-1'}}) }}
+                        {{ form_widget(form.name, {'attr': {'class': 'form-control bg-dark text-white mt-1'}}) }}
                     </div>
 
                     <div class="form-group mb-3">
                         {{ form_label(form.surname) }}
-                        {{ form_widget(form.surname, {'attr': {'class': 'form-control mt-1'}}) }}
+                        {{ form_widget(form.surname, {'attr': {'class': 'form-control bg-dark text-white mt-1'}}) }}
                     </div>
 
                     <div class="form-group mb-3">
                         {{ form_label(form.carNumber) }}
-                        {{ form_widget(form.carNumber, {'attr': {'class': 'form-control mt-1'}}) }}
+                        {{ form_widget(form.carNumber, {'attr': {'class': 'form-control bg-dark text-white mt-1'}}) }}
                     </div>
 
                     <div class="form-group mb-3">
                         {{ form_label(form.teamId) }}
-                        {{ form_widget(form.teamId, {'attr': {'class': 'form-control form-select mt-1'}}) }}
+                        {{ form_widget(form.teamId, {'attr': {'class': 'form-control form-select bg-dark text-white mt-1'}}) }}
                     </div>
                 </div>
 
