Add test for displaying driver edit form

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -131,6 +131,10 @@ input {
     text-decoration: none;
 }
 
+.form-field-error ul {
+    margin-bottom: 0;
+}
+
 @media only screen and (min-width: 960px)
 {
     .flow-text {
