--- a/src/Admin/Templates/admin_driver/edit.html.twig
+++ b/src/Admin/Templates/admin_driver/edit.html.twig
@@ -7,7 +7,7 @@
     <div class="card bg-dark mb-5">
         <div class="card-body">
             {{ form_start(form, {'attr': {'class': 'text-white'}}) }}
-                <div class="admin-form-errors">
+                <div class="admin-form-errors text-danger">
                     {{ form_errors(form) }}
                 </div>
 
@@ -15,21 +15,41 @@
                     <div class="form-group mb-3">
                         {{ form_label(form.name) }}
                         {{ form_widget(form.name, {'attr': {'class': 'form-control bg-dark text-white mt-1'}}) }}
+                        {% if form_errors(form.name) %}
+                            <div class="form-field-error text-danger mt-1">
+                                {{ form_errors(form.name) }}
+                            </div>
+                        {% endif %}
                     </div>
 
                     <div class="form-group mb-3">
                         {{ form_label(form.surname) }}
                         {{ form_widget(form.surname, {'attr': {'class': 'form-control bg-dark text-white mt-1'}}) }}
+                        {% if form_errors(form.surname) %}
+                            <div class="form-field-error text-danger mt-1">
+                                {{ form_errors(form.surname) }}
+                            </div>
+                        {% endif %}
                     </div>
 
                     <div class="form-group mb-3">
                         {{ form_label(form.carNumber) }}
                         {{ form_widget(form.carNumber, {'attr': {'class': 'form-control bg-dark text-white mt-1'}}) }}
+                        {% if form_errors(form.carNumber) %}
+                            <div class="form-field-error text-danger mt-1">
+                                {{ form_errors(form.carNumber) }}
+                            </div>
+                        {% endif %}
                     </div>
 
                     <div class="form-group mb-3">
                         {{ form_label(form.teamId) }}
                         {{ form_widget(form.teamId, {'attr': {'class': 'form-control form-select bg-dark text-white mt-1'}}) }}
+                        {% if form_errors(form.teamId) %}
+                            <div class="form-field-error text-danger mt-1">
+                                {{ form_errors(form.teamId) }}
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
 
