Fix back to list button

--- a/src/Admin/Templates/admin_driver/edit.html.twig
+++ b/src/Admin/Templates/admin_driver/edit.html.twig
@@ -58,5 +58,5 @@
         </div>
     </div>
 
-    <a href="{{ path('driver_index') }}" class="btn btn-dark">back to list</a>
+    <a href="{{ path('admin_driver') }}" class="btn btn-dark">back to list</a>
 {% endblock %}
