--- a/src/Domain/Templates/driver/_delete_form.html.twig
+++ b/src/Domain/Templates/driver/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" class="display-inline" action="{{ path('driver_delete', {'id': driver.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" class="display-inline" action="{{ path('driver_delete', {'id': driver.id}) }}" onsubmit="return confirm('Czy jesteś pewien? Ta operacja jest nieodwracalna.');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ driver.id) }}">
     <button class="btn btn-outline-danger">Delete</button>
