Add section for additional statistics

--- a/src/Admin/Templates/admin_driver/show.html.twig
+++ b/src/Admin/Templates/admin_driver/show.html.twig
@@ -25,40 +25,48 @@
                 {# LEFT – DRIVER INFO #}
                 <div class="col-12 col-lg-8">
                     <div class="list-group list-group-flush bg-dark">
-
                         <div class="list-group-item bg-dark text-white d-flex justify-content-between">
                             <span class="fw-semibold">ID</span>
                             <span>{{ driver.id }}</span>
                         </div>
-
                         <div class="list-group-item bg-dark text-white d-flex justify-content-between">
                             <span class="fw-semibold">Imię</span>
                             <span>{{ driver.name }}</span>
                         </div>
-
                         <div class="list-group-item bg-dark text-white d-flex justify-content-between">
                             <span class="fw-semibold">Nazwisko</span>
                             <span>{{ driver.surname }}</span>
                         </div>
-
                         <div class="list-group-item bg-dark text-white d-flex justify-content-between align-items-center">
                             <span class="fw-semibold">Numer samochodu</span>
                             <span class="badge bg-success fs-6">
                             #{{ driver.carNumber }}
                         </span>
                         </div>
-
                         <div class="list-group-item bg-dark text-white d-flex justify-content-between">
                             <span class="fw-semibold">Zespół</span>
                             <span>{{ driver.team.name }}</span>
                         </div>
+                    </div>
 
+                    <h4 class="mb-4 mt-3 text-center">
+                        Dodatkowe statystyki
+                    </h4>
+
+                    <div class="list-group list-group-flush bg-dark">
+                        <div class="list-group-item bg-dark text-white d-flex justify-content-between">
+                            <span class="fw-semibold">Rozegrane sezony offline</span>
+                            <span>0</span>
+                        </div>
+                        <div class="list-group-item bg-dark text-white d-flex justify-content-between">
+                            <span class="fw-semibold">Rozegrane sezony multiplayer</span>
+                            <span>0</span>
+                        </div>
                     </div>
                 </div>
                 {# RIGHT – TEAM CARD #}
                 <div class="col-12 col-lg-4">
                     <div class="card bg-secondary text-white h-100 text-center p-3">
-
                         {% if driver.team.picture %}
                             <img
                                     src="{{ asset('/assets/cars/' ~ driver.team.highResolutionPicture) }}"
@@ -67,7 +75,6 @@
                                     style="max-height: 160px;"
                             >
                         {% endif %}
-
                         <div class="fw-semibold fs-5">
                             {{ driver.team.name }}
                         </div>
