Fill computer statistics

--- a/src/Admin/Templates/admin_driver/show.html.twig
+++ b/src/Admin/Templates/admin_driver/show.html.twig
@@ -56,7 +56,7 @@
                     <div class="list-group list-group-flush bg-dark">
                         <div class="list-group-item bg-dark text-white d-flex justify-content-between">
                             <span class="fw-semibold">Rozegrane sezony offline</span>
-                            <span>0</span>
+                            <span>{{ driverComputerStatistics.seasonsPlayed }}</span>
                         </div>
                         <div class="list-group-item bg-dark text-white d-flex justify-content-between">
                             <span class="fw-semibold">Rozegrane sezony multiplayer</span>
