Fill multiplayer statistics

--- a/src/Admin/Templates/admin_driver/show.html.twig
+++ b/src/Admin/Templates/admin_driver/show.html.twig
@@ -60,7 +60,7 @@
                         </div>
                         <div class="list-group-item bg-dark text-white d-flex justify-content-between">
                             <span class="fw-semibold">Rozegrane sezony multiplayer</span>
-                            <span>0</span>
+                            <span>{{ driverMultiplayerStatistics.seasonsPlayed }}</span>
                         </div>
                     </div>
                 </div>
