--- a/src/Multiplayer/Templates/index.html.twig
+++ b/src/Multiplayer/Templates/index.html.twig
@@ -60,10 +60,10 @@
                         <h4>Dołącz do ligi</h4>
                     </div>
                     <div class="card-body">
-                        <form method="POST" action="{{ path('league_join') }}">
+                        <form method="POST" action="{{ path('user_season_join') }}">
                             <div class="form-group">
-                                <label for="league-key">Klucz do ligi</label>
-                                <input type="text" class="form-control mt-1" id="league-key" name="league-secret">
+                                <label for="user-season-key">Klucz do ligi</label>
+                                <input type="text" class="form-control mt-1" id="user-season-key" name="user_season_secret">
                             </div>
                             <button type="submit" class="btn btn-success mt-2">Dołącz</button>
                         </form>
@@ -115,7 +115,7 @@
                                                 {% endfor %}
                                             </td>
                                             <td>
-                                                <a href="{{ path('multiplayer_show_season', {'id' : league.getId() }) }}" class="btn btn-warning">Wyświetl</a>
+                                                <a href="{{ path('user_season_show', {'id' : league.getId() }) }}" class="btn btn-warning">Wyświetl</a>
                                             </td>
                                         </tr>
                                     {% endfor %}
